Made edits to summary texts.

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             
             <h3>Format: News, Talk, and Sports</h3>
             <h3>Broadcasting since 1925</h3>
-            <p>KMOX Radio (AM 1120) is dedicated to being the dominant information and entertainment source for the St. Louis region. The station signed on Christmas Eve, 1925 and is heard in 44 states and throughout much of Canada, Mexico, and the Caribbean. “The Voice of St. Louis” is woven into the fabric of the community. Day in and day out, KMOX’s news, talk and sports format is the information life line for Mid-America. KMOX boasts the largest radio news department in St. Louis and Missouri and also has the resources of CBS News and AP.
+            <p>KMOX Radio (AM 1120) is dedicated to being the dominant information and entertainment source for the St. Louis region. The station signed on Christmas Eve, 1925 and is heard in 44 states and throughout much of Canada, Mexico, and the Caribbean. 
+            “The Voice of St. Louis” is woven into the fabric of the community. Day in and day out, KMOX’s news, talk and sports format is the information life line for Mid-America. KMOX boasts the largest radio news department in St. Louis and Missouri and also has the resources of CBS News and AP.
             </p>
-            <p class="final-para">KMOX’s pledge is simple…to be the dominant information and entertainment source for the St. Louis Region! KMOX is committed to news. KMOX is committed to providing traffic and weather information. KMOX is committed to sports. KMOX is committed to educating, informing and entertaining St. Louisans. KMOX has the heartbeat of the community in mind, responding to charitable needs. KMOX belongs to the people of St. Louis. This is an honor and responsibility KMOX takes very seriously. That’s why KMOX is the “Voice of St. Louis.”
+            <p class="final-para">KMOX’s pledge is simple…to be the dominant information and entertainment source for the St. Louis Region! KMOX is committed to news. KMOX is committed to providing traffic and weather information. KMOX is committed to sports. 
+            KMOX is committed to educating, informing and entertaining St. Louisans. KMOX has the heartbeat of the community in mind, responding to charitable needs. KMOX belongs to the people of St. Louis. This is an honor and responsibility KMOX takes very seriously. That’s why KMOX is the “Voice of St. Louis.”
             </p>
         </article>
 
@@ -68,7 +70,8 @@
             <h3>Broadcasting since 1972</h3>
             <p>St. Louis Public Radio is a news organization and NPR member station. We operate by the same guiding principles as NPR and provide our audiences with news and programs that are significant to their communities and their world.
             </p>
-            <p class="final-para">As one of the most trusted brands in America, NPR expects its entire network of listener-supported member stations to provide reporting that is credible, trustworthy and free from any external commercial, political, or financial forces. St. Louis Public Radio provides that to our audiences across the St. Louis Metropolitan region, in Quincy, Illinois, and in Rolla and Lebanon, Missouri.
+            <p class="final-para">As one of the most trusted brands in America, NPR expects its entire network of listener-supported member stations to provide reporting that is credible, trustworthy and free from any external commercial, political, or financial forces. 
+            St. Louis Public Radio provides that to our audiences across the St. Louis Metropolitan region, in Quincy, Illinois, and in Rolla and Lebanon, Missouri.
             </p>
         </article>
 
@@ -79,9 +82,14 @@
             </figure>
             <h3>Format: Variety</h3>
             <h3>Broadcasting since 1987</h3>
-            <p>KDHX is a pretty rare thing. In an increasingly commercial world, we are proud to be a non-profit media organization celebrating 33 years of independent music, art, and culture in St. Louis and around the world. KDHX has evolved into a community institution dedicated to preserving, presenting, and promoting music and the arts in the Saint Louis region. Our mission is to build community through media, which we do by being an essential point of connectivity for area organizations, artists, and audiences. KDHX is recognized as a public service broadcaster and community builder through its various channels - 88.1 FM, KDHX.org, and Folk School of KDHX.
+            <p>KDHX is a pretty rare thing. 
+            In an increasingly commercial world, KDHX is proud to be a non-profit media organization celebrating 33 years of independent music, art, and culture in St. Louis and around the world. 
+            KDHX has evolved into a community institution dedicated to preserving, presenting, and promoting music and the arts in the Saint Louis region. Its mission is to build community through media, which they do by being an essential point of connectivity for area organizations, artists, and audiences. 
+            KDHX is recognized as a public service broadcaster and community builder through its various channels - 88.1 FM, KDHX.org, and Folk School of KDHX.
             </p>
-            <p class="final-para">KDHX is deeply committed to supporting local and independent artists. We serve local artists, arts, and nonprofit organizations by promoting their work through on-air announcements, calendar listings, event sponsorships, and arts reviews. KDHX employs more than 300 artists per year and donates over $1 million of free publicity to promote the work of artists and organizations through on-air announcements and on-air short-form programming. KDHX strives to bring it all to the St. Louis community, by connecting its audiences with artists, venues, and institutions that matter.
+            <p class="final-para">KDHX is deeply committed to supporting local and independent artists. 
+            It serves local artists, arts, and nonprofit organizations by promoting their work through on-air announcements, calendar listings, event sponsorships, and arts reviews. KDHX employs more than 300 artists per year and donates over $1 million of free publicity to promote the work of artists and organizations through on-air announcements and on-air short-form programming. 
+            KDHX strives to bring it all to the St. Louis community, by connecting its audiences with artists, venues, and institutions that matter.
             </p>
         </article>
 
@@ -94,7 +102,8 @@
             <h3>Broadcasting since 2013</h3>
             <p>Classic 107.3 was created by people who believe a vibrant arts and cultural scene is essential for   our community to thrive. Since 2013, Classic 107.3 has been a home for the St. Louis fine arts and performing arts to come together, to share ideas and to flourish. Listeners tune in to hear Beethoven, log on to learn about the local arts scene, wind down with podcasts about favorite music, and take Classic 107.3 with them throughout their day and around the globe.
             </p>
-            <p class="final-para">Classic 107.3 is a one-of-a-kind radio station with a commitment to providing outstanding programming in support of the arts for the benefit of the St. Louis community. Organized as a nonprofit, 501(c)(3) entity, the station offers a broad and invigorating format on both analog radio at 107.3 and in hybrid digital at 96.3 HD2. Content is also streamed live on the internet and via the station’s mobile app.
+            <p class="final-para">Classic 107.3 is a one-of-a-kind radio station with a commitment to providing outstanding programming in support of the arts for the benefit of the St. Louis community. 
+            Organized as a nonprofit, 501(c)(3) entity, the station offers a broad and invigorating format on both analog radio at 107.3 and in hybrid digital at 96.3 HD2. Content is also streamed live on the internet and via the station’s mobile app.
             </p>
         </article>
        
